[css] fix grid size on small devices

--- a/src/styles/blocs/item.scss
+++ b/src/styles/blocs/item.scss
@@ -1,10 +1,10 @@
 .items {
   margin: 3rem 0;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
-  grid-gap: 4em;
-  
+  grid-gap: 4rem;
+
   @include medium {
+    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
     grid-gap: 8rem;
     margin: 4rem;
   }
